Removed unused imports. Removed unused variables.
git-svn-id: http://svn.jdtaus.org/svnroot/jdtaus/jdtaus-banking/jdtaus-banking-ri-currencydirectory/trunk@3364 d3f52c91-230f-0410-802c-e3ec080d4bae